[package]
name = "upi"
description = "A simple, lightweight Rust daemon that monitors URLs and triggers local scripts when content changes."
version = "0.1.3"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
